// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. should handle no child elements 1`] = `""`;

exports[`2. should render a single child element 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          standard-1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. should render two child elements 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          standard-1
        </div>
      </div>
      <div />
      <div>
        <div>
          standard-2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4. should render three child elements 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          standard-1
        </div>
      </div>
      <div />
      <div>
        <div>
          standard-2
        </div>
      </div>
      <div />
      <div>
        <div>
          standard-3
        </div>
      </div>
    </div>
  </div>
</div>
`;
